css/styles.css
* {
	box-sizing: border-box;
	list-style-type: none;
}

body {
	text-decoration: none;
	width: 100%;
}

img {
	height: 20px;
}

h1 {
	font-size: 1.2em;
	color: grey;
}

h2 {
	text-transform: uppercase;
	font-size: 1.125em;
	color: grey;
}

/* Header */

#menus {
	display: flex;
	flex-direction: column;
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	width: 100%;
}

header {
	background: #7477bf;
	color: white;
	display: flex;
	padding-bottom: 0;
	margin-bottom: 0;
	width: 100%;
}

header ul {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	width: 100%;
}

header li {
	justify-content: center;
}

#app-name {
	font-family: 'Lato', sans-serif;
	font-size: 1.3em;
	font-weight: 300;
	padding: 2px;
	border: 1px solid pink;
}

#bold-app-name {
	font-weight: 900;
}

#trademark {
	vertical-align: super;
	font-size: .35em;
	font-weight: 100;
}


/* Navigation Menu */

nav {
	background: #4d4c72;
	color: grey;
	width: 100%;
	padding: 5px;
}

nav ul {
	display: flex;
	width: 100%;
	padding: 0;
	justify-content: space-around;
}

nav li {
/*	padding: 10px;*/
}

#dash-and-search {
	background: white;
	width: 100%;
	border: 2px solid red;
	height: 50px;
}

#search-banner {
	width: 60%;
	background: #fbfbfb;
	height: 40px;
}

#search-bar {
/*	width: 40%;*/
	height: 30px;
	background: white;
	border-radius: 4px;
}

/* Main */

main {
	padding: 20px;
	width: 100%;
	background: white;
	border: 1px solid orange; /* for testing */
}

#modules {
/*	display: flex;*/
}

#modules div {
/*	width: 50%;*/
/*	flex-flow: wrap;*/
}

/* Charts */

div {
	border: 1px solid green;
}

#daily-traffic {
	border: 1px solid black;
}

#mobile-users {

}
/* Social Stats Widget */

#social-stats ul {
	display: inline-flex;
	width: 100%;
}

#social-stats li {
	font-size: 1.125em;
	color: #7377bf;
	flex-grow: 1;
	margin: 10px;
	background: #fbfbfb;
	border: 1px solid gray;
	height: 60px;
	border-radius: 4px;
}

#social-stats img {
	background: #7477bf;
	color: white;
	height: 50px;
	border-radius: 50px;
}

.social-number {
	color: grey;
	font-size: 1.1em;
}

/* Buttons */

button {
	border-radius: 4px;
}

#send-button,
#save-button {
	background: #7377bf;
	color: white;
}

#cancel-button {
	background: #b2b2b2;
	color: white;
}
/* ----- MEDIA QUERIES -----*/

@media screen and (min-width: 320px) {
	header {
		justify-content: space-between;
		padding-right: 10px;
		height: 60px;
		position: fixed;
		width: 100%;
		top: 0;
		right: 0;
	}

	header ul {
		flex-direction: row;
		justify-content: space-between;
	}

	header li {
		padding-right: 5px;
		padding-left: 5px;
		border: 1px solid yellow; //for testing
	}

	#app-name {
		margin-right: auto;
	}

	nav {
		width: 80px;
		height: 100%;
		top: 60px;
		bottom: 0;
		position: fixed;
		height: 100%;
	}

	nav ul {
		justify-content: flex-start;
		flex-direction: column;
		margin-top: 20px;
		padding: 0;
		margin-left: 0;
	}

	nav li {
		padding-top: 20px;
		padding-bottom: 20px;
	}

	nav li img {
		height: 35px;
	}

	main {
		margin-top: 60px;
		margin-left: 80px;
		width: calc(100%-80px);
	}

	#charts {
		width: 100%;
		margin: auto;
	}

	#daily-traffic {
		border: 1px solid black;
		float: left;
		width: 50%;
	}

	#mobile-users {
		width: 50%;
		float: right;
	}

}

